fix footer element alignment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,7 +73,6 @@ h5 {
 }
 
 .eu-badge {
-  margin-left: auto;
   height: 32px;
   width: 286px;
   background: url("/wp-content/themes/bonumic/assets/images/cef-eu-black.svg")
@@ -85,7 +84,6 @@ h5 {
 
   &--white {
     margin-top: 50px;
-    margin-left: auto;
     background: url("/wp-content/themes/bonumic/assets/images/cef-eu-white.svg")
       no-repeat;
 
